-This new menu not only looks awesome, but has a few funny little features to go along with it
-On the menu, you may notice blackened versions of each spooky mod boss. When you defeat each boss in game, it will be permanently unblackened on the menu
-Clicking the menu logo also plays a funny sound and makes the boss outlines flash


Other New Additions:

-Added craftable "safe" versions of the catacomb bricks and walls you can build with, they can be shimmered into their unsafe variants after big bone is defeated




~CHANGES TO EXISTING CONTENT~


-The underground spooky forest cabin chests are no longer locked, and the old wood key has been removed from the mod
-Reworked the gore monger armor set bonus, instead of giving you an aura it now summons a baby orro or boro (depending on the helmet) that will viciously attack enemies
-Buffed every weapon/acessory you find in the spooky forest cabin chests, and catacomb chests for both layers 1 and 2
-Buffed the catacomb layer 2 enemy stats a bit
-Big bone's red flower stream attack is now telegraphed before he starts using it
-Switched around big bone's skull wisp attacks, the yellow ones in phase 1 will now directly target you while the orange ones in phase 2 are now flung randomly
-Added new custom sounds for spooky spirit's charging and death, made by rockwizard
-Spooky spirit now correctly displays that it is nighttime only in it's bestiary entry
-Spooky mod music boxes now display the song title in color to make it more noticable and cool




~BUGS AND OTHER FIXES~


-Fixed issue where you could switch to other items in your hotbar while using spooky mod's holdout weapons (such as the slingshots and the old hunter's crossbow)
-Fixed the chat messages for the catacomb barrier keys not being localized (they are now in the dialogue localization file)
-Fixed red & purple solution not converting ash grass into eye valley grass
-Fixed samson's cuff ability not working at all


